--- a/ITATools/ITATools/ITATools.csproj
+++ b/ITATools/ITATools/ITATools.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Calendar_Converter">
       <HintPath>..\..\..\wsu-gc-calendar\Calendar Converter\Calendar Converter\bin\Debug\Calendar_Converter.dll</HintPath>
     </Reference>
+    <Reference Include="JunkCodeRemover">
+      <HintPath>..\..\..\JunkCodeRemover\JunkCodeRemover\JunkCodeRemover\bin\Debug\JunkCodeRemover.dll</HintPath>
+    </Reference>
     <Reference Include="MVVMObjectLibrary">
       <HintPath>..\..\..\wsu-gc-calendar\Calendar Converter\Calendar Converter\bin\Debug\MVVMObjectLibrary.dll</HintPath>
     </Reference>
@@ -106,6 +109,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\BackgroundTile.PNG" />
+    <Resource Include="Resources\favicon.ico" />
+    <Resource Include="Resources\global_logo.png" />
+    <Resource Include="Resources\logo.png" />
+    <Resource Include="Resources\wsu-globalcampus-signature-primary.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
