Updates to various tools

--- a/CodeGenerator/CodeGenerator/app.config
+++ b/CodeGenerator/CodeGenerator/app.config
@@ -1,9 +1,14 @@
-﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CodeGenerator.Properties" GeneratedClassName="Settings">
-  <Profiles />
-  <Settings>
-    <Setting Name="SyllabusCode" Type="System.String" Scope="User">
-      <Value Profile="(Default)">&lt;p style="text-align: center;"&gt;&lt;span style="font-size: x-large;"&gt;Course Prefix &amp;amp; Number&lt;/span&gt;&lt;br /&gt; &lt;span style="font-size: large;"&gt;Title of Course&lt;br /&gt; &lt;/span&gt;&lt;/p&gt;
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CodeGenerator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <userSettings>
+        <CodeGenerator.Properties.Settings>
+            <setting name="SyllabusCode" serializeAs="String">
+                <value>&lt;p style="text-align: center;"&gt;&lt;span style="font-size: x-large;"&gt;Course Prefix &amp;amp; Number&lt;/span&gt;&lt;br /&gt; &lt;span style="font-size: large;"&gt;Title of Course&lt;br /&gt; &lt;/span&gt;&lt;/p&gt;
 &lt;p&gt;&lt;strong&gt;Course Instructor:&lt;/strong&gt;&lt;/p&gt;
 &lt;p class="includeGCContent" data-url="https://learn-content.wsu.edu/DynamicContent.asmx/InstructorInformation?courseId=@X@course.id@X@"&gt;This content will only display when Edit Mode is turned OFF. Do not delete this placeholder text.&lt;/p&gt;
 &lt;p&gt;&lt;strong&gt;Text and Resources:&lt;/strong&gt;&lt;/p&gt;
@@ -136,7 +141,8 @@
 &lt;p class="includeGCContent" data-url="https://learn-content.wsu.edu/includes/credit/syllabus/librarySupport.html?courseId=@X@course.id@X@"&gt;This content will only display when Edit Mode is turned OFF. Do not delete this placeholder text.&lt;/p&gt;
 &lt;p class="includeGCContent" data-url="https://learn-content.wsu.edu/includes/credit/syllabus/eTutoring.html?courseId=@X@course.id@X@"&gt;This content will only display when Edit Mode is turned OFF. Do not delete this placeholder text.&lt;/p&gt;
 &lt;p class="includeGCContent" data-url="https://learn-content.wsu.edu/includes/credit/syllabus/academicCalendar.html?courseId=@X@course.id@X@"&gt;This content will only display when Edit Mode is turned OFF. Do not delete this placeholder text.&lt;/p&gt;
-&lt;p class="includeGCContent" data-url="https://learn-content.wsu.edu/includes/credit/syllabus/CampusSafety.html?courseId=@X@course.id@X@"&gt;This content will only display when Edit Mode is turned OFF. Do not delete this placeholder text.&lt;/p&gt;</Value>
-    </Setting>
-  </Settings>
-</SettingsFile>
+&lt;p class="includeGCContent" data-url="https://learn-content.wsu.edu/includes/credit/syllabus/CampusSafety.html?courseId=@X@course.id@X@"&gt;This content will only display when Edit Mode is turned OFF. Do not delete this placeholder text.&lt;/p&gt;</value>
+            </setting>
+        </CodeGenerator.Properties.Settings>
+    </userSettings>
+</configuration>
